fix(Tabs): fix the background color in dark mode

--- a/src/components/tabs/demos/demo4.less
+++ b/src/components/tabs/demos/demo4.less
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   z-index: 100;
-  background: #ffffff;
+  background: var(--adm-color-background);
 }
 
 .content {
